--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
